--- a/appview/pages/templates/repo/fragments/cloneDropdown.html
+++ b/appview/pages/templates/repo/fragments/cloneDropdown.html
@@ -43,13 +43,14 @@
 
                 <!-- SSH Clone -->
                 <div class="mb-3">
+                    {{ $repoOwnerHandle := resolve .RepoInfo.OwnerDid }}
                     <label class="block text-xs font-medium text-gray-700 dark:text-gray-300 mb-1">SSH</label>
                     <div class="flex items-center border border-gray-300 dark:border-gray-600 rounded">
                         <code
                             class="flex-1 px-3 py-2 text-sm bg-gray-50 dark:bg-gray-700 text-gray-900 dark:text-gray-100 rounded-l select-all cursor-pointer whitespace-nowrap overflow-x-auto"
                             onclick="window.getSelection().selectAllChildren(this)"
-                            data-url="git@{{ $knot | stripPort }}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}"
-                        >git@{{ $knot | stripPort }}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code>
+                            data-url="git@{{ $knot | stripPort }}:{{ $repoOwnerHandle }}/{{ .RepoInfo.Name }}"
+                        >git@{{ $knot | stripPort }}:{{ $repoOwnerHandle }}/{{ .RepoInfo.Name }}</code>
                         <button
                             onclick="copyToClipboard(this, this.previousElementSibling.getAttribute('data-url'))"
                             class="px-3 py-2 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 border-l border-gray-300 dark:border-gray-600"
