--- a/appview/pages/templates/user/followers.html
+++ b/appview/pages/templates/user/followers.html
@@ -1,4 +1,4 @@
-{{ define "title" }}{{ or .Card.UserHandle .Card.UserDid }} · followers {{ end }}
+{{ define "title" }}{{ resolve .Card.UserDid }} · followers {{ end }}
 
 {{ define "profileContent" }}
   <div id="all-followers" class="md:col-span-8 order-2 md:order-2">
