appview/pages: fix `pages.RepoComparedDiffFragment()`
- remove unused parameters
- pass correct parameters
- rename with `*Fragment` suffix

Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -111,7 +111,7 @@
 {{ end }}
 
 {{ define "contentAfter" }}
-  {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff .DiffOpts) }}
+  {{ template "repo/fragments/diff" (list .Diff .DiffOpts) }}
 {{end}}
 
 {{ define "contentAfterLeft" }}
