--- a/appview/pages/templates/repo/pulls/patch.html
+++ b/appview/pages/templates/repo/pulls/patch.html
@@ -54,7 +54,7 @@
 {{ end }}
 
 {{ define "contentAfter" }}
-  {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff .DiffOpts) }}
+  {{ template "repo/fragments/diff" (list .Diff .DiffOpts) }}
 {{end}}
 
 {{ define "contentAfterLeft" }}
