appview/db: split star subjects
- rename `starred_by_did` column to `did`
- rename `repo_at` column to `subject_at` and removed foreign key
  constraints.
- rename `RepoAt` field to `SubjectAt`
- remove `Repo` field and split `models.Star` to `RepoStar` and
  `StringStar` as now there can be two kinds of reverse mappings.

Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/timeline/fragments/timeline.html
+++ b/appview/pages/templates/timeline/fragments/timeline.html
@@ -59,9 +59,9 @@
 {{ define "timeline/fragments/starEvent" }}
   {{ $root := index . 0 }}
   {{ $event := index . 1 }}
-  {{ $star := $event.Star }}
+  {{ $star := $event.RepoStar }}
   {{ with $star }}
-    {{ $starrerHandle :=  resolve .StarredByDid }}
+    {{ $starrerHandle := resolve .Did }}
     {{ $repoOwnerHandle :=  resolve .Repo.Did }}
     <div class="pl-6 py-2 bg-white dark:bg-gray-800 text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2 text-sm">
         {{ template "user/fragments/picHandleLink" $starrerHandle }}
