appview/pages: fix incorrect closed-pulls stat
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -31,7 +31,7 @@
        "Key" "closed"
        "Value" "closed"
        "Icon" "ban"
-       "Meta" (string .RepoInfo.Stats.IssueCount.Closed)) }}
+       "Meta" (string .RepoInfo.Stats.PullCount.Closed)) }}
   {{ $values := list $open $merged $closed }}
   <div class="grid gap-2 grid-cols-[auto_1fr_auto] grid-row-2">
     <form class="flex relative col-span-3 sm:col-span-1 sm:col-start-2" method="GET">
