appview/pages: fix unclosed tag in base repo settings form
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/settings/general.html
+++ b/appview/pages/templates/repo/settings/general.html
@@ -58,7 +58,7 @@
           {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
         </button>
       </div>
-    <fieldset>
+    </fieldset>
   </form>
 {{ end }}
 
