appview/repo: allow compare URLs to not be path escaped
this changes the routing logic slightly to allow non-path escaped refs
in compare urls that use the `...` syntax:

previously only this worked:

    /compare/master/sl%2Fuvpzuszrulvq
    /compare/master...sl%2Fuvpzuszrulvq

with this patch:

    /compare/master/sl%2Fuvpzuszrulvq
    /compare/master...sl%2Fuvpzuszrulvq
    /compare/master...sl/uvpzuszrulvq (new)

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/compare/compare.html
+++ b/appview/pages/templates/repo/compare/compare.html
@@ -17,7 +17,7 @@
 {{ end }}
 
 {{ define "mainLayout" }}
-  <div class="px-1 col-span-full flex flex-col gap-4">
+  <div class="px-1 flex-grow col-span-full flex flex-col gap-4">
     {{ block "contentLayout" . }}
       {{ block "content" . }}{{ end }}
     {{ end }}
