appview/pages: auto-select knot when there's only one
Signed-off-by: Jordan Reger <jordan@reger.co>

--- a/appview/pages/templates/repo/fork.html
+++ b/appview/pages/templates/repo/fork.html
@@ -25,6 +25,7 @@
                 value="{{ . }}"
                 class="mr-2"
                 id="domain-{{ . }}"
+                {{if eq (len $.Knots) 1}}checked{{end}}                
                 />
             <label for="domain-{{ . }}" class="dark:text-white">{{ . }}</label>
           </div>
