--- a/appview/pages/templates/timeline/fragments/goodfirstissues.html
+++ b/appview/pages/templates/timeline/fragments/goodfirstissues.html
@@ -3,9 +3,8 @@
     <a href="/goodfirstissues" class="no-underline hover:no-underline">
       <div class="flex items-center justify-between gap-2 bg-purple-200 dark:bg-purple-900 border border-purple-400 dark:border-purple-500 rounded mb-4 py-4 px-6 ">
         <div class="flex-1 flex flex-col gap-2">
-          <div class="text-purple-500 dark:text-purple-400">Oct 2025</div>
           <p>
-            Make your first contribution to an open-source project this October.
+            Make your first contribution to an open-source project.
             <em>good-first-issue</em> helps new contributors find easy ways to
             start contributing to open-source projects.
           </p>
